--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,11 @@
     <string name="all_deleted">All notes deleted</string>
     <string name="title_activity_editor">EditorActivity</string>
 
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
     <string name="new_note">New note</string>
     <string name="note_updated">Note updated</string>
     <string name="action_delete">Delete</string>
     <string name="note_deleted">Note deleted</string>
+    <string name="dummy_text">Dummy Text</string>
+    <string name="note">Note</string>
+    <string name="enter_note_hint">Enter note here</string>
 </resources>
